# model-serving-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  model.pkl  pyproject.toml
continental_project/: README.md  requirements.txt  xg-boost-gs-model.json
continental_project/deployment/: main.py
continental_project/deployment/api/v1/: api.py
continental_project/deployment/api/v1/endpoints/: tire_performance.py
continental_project/deployment/core/: config.py
continental_project/deployment/schema/: model_schema.py
continental_project/models_evaluation/: gradient_boost_regressor.py  gradient_boost_regressor_with_grid_search.py  linear_regression.py  random_forest.py  random_forest_with_grid_search.py  results.txt  xg_boost.py  xg_boost_with_grid_search.py
servingapi/: logger.py  metrics.py  model-settings.json  models.py  runtime.py
servingapi/model1/: logger.py  model-settings.json  runtime.py
servingapi/model2/: model-settings.json  runtime.py
