[tool.poetry]
authors = ["margarida fernandes"]
description = "Serving API"
license = "proprietary"
name = "model-serving-api"
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

fastapi = "0.88.0"
hiredis = "2.0.0"
httpx = "*"
mlflow = "1.29.*"
mlserver-mlflow = "1.1.*"
newrelic = "8.*"
orjson = "3.8.*"
protobuf = "3.20.*"
python-json-logger = "2.0.4"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
uvloop = "*"
mlserver-sklearn = "1.3.5"
mlserver = "^1.3.5"

[tool.poetry.dev-dependencies]
black = "*"
bumpversion = "*"
fakeredis = "*"
flake8 = "4.*"
isort = "5.10.*"
pydocstyle = "*"
pyproject-flake8 = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-dotenv = "*"
pytest-mypy = "*"
pytest-random-order = "*"
scipy = "1.8.*"
toml = "*"
types-redis = "*"

# for unit testing only.
lightgbm = "3.*"
scikit-learn = "1.1.1"
xgboost = "1.6.*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core", "wheel", "cython"]
